complete switch to english; first support for google_speech; refactory needed

--- a/AlviBot-0.3.1/alvi.cfg
+++ b/AlviBot-0.3.1/alvi.cfg
@@ -13,14 +13,14 @@
 ###########################
 
 ####
-# Elenco dei nomi delle caselle di posta
+# mail boxes list
 #
 [Mail]
 inboxes=default-inbox, gmail
 
 
 #####
-# Elenco nomi dei Feed rss
+# rssfeed list
 #
 [Feed]
 rssfeeds=corriere
@@ -31,31 +31,30 @@ address = "http://www.corriere.it/rss/homepage.xml"
 
 
 #####
-# Configurazione specifica per ogni casella
+# Mailbox configuration
 #
 [default-inbox]
 mail_server = imap.YourMailServer.com
 username = YourUsername
 password = YourPassword
 
-# IMAP or POP (POP non e' ancora supportato!!!)
+# IMAP or POP (POP not supported yet!!)
 Protocol= IMAP
 
-# Se il server mail supporta SSL
+# If mail server has SSL
 SSL=True
 
-# Intervallo di controllo della casella di posta
+# Check interval (minutes)
 check = 2
 
 #####
-# Parametro interno di Alvi per tener traccia dell'ultima mail letta. 
-# Non e' necessario preoccuparsene, viene automaticamente aggiornata ad ogni utilizzo.
+# Internal variable to keep track of mail indexes, automatically updated by Alvi 
 
 lastid = none
 
 
 ######
-# Esempio piu' pratico con il diffusissimo gmail
+# Gmail example
 [gmail]
 
 mail_server=imap.gmail.com
@@ -68,7 +67,7 @@ lastid= none
 
 
 ##############
-# Impostazioni per il file di log
+# LogFile location
 [Log]
 LogFile=/tmp/alvi.log
 
